2005-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
        fix warning about uninitialized var EXPAND_CONTENT_FILES

Tue Aug  9 12:01:27 2005  tjlocal  <timj@imendio.com>

	* autogen.sh: bail out with exit $? for failing programs.

2005-07-26  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: Pass DOC_MAIN_SGML_FILE as the main filename to
	gtkdoc-mkdb. Avoids creating spurious foo.sgml files in an XML build.
	Patch from Malcolm Tredinnick. (#311344)

	Prefix build messages with "gtk-doc: " rather than surrounding them
	with "***" which looks like an error. (#170008)

2005-07-26  Damon Chaplin  <damon@gnome.org>

	* README: removed comment about not being able to add section
	documentation to source code files, which is not true any more.

2005-07-03  Damon Chaplin  <damon@gnome.org>

	* Released 1.4.

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in: Fix typos in warnings.

2005-06-17  Mikael Hallendal  <micke@imendio.com>

	* README: Updated Devhelp web address.

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in: Add "expand-content-files:s" to the GetOptions() call.

2005-05-10  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Add an --expand-content-files option
	to specify extra files to expand abbreviations in and
	copy into the output directory.

	* gtk-doc.make examples/Makefile.am: Add expand_content_files
	variable.

	* gtkdoc-mktmpl.in (OutputTemplateFile): Add an 
	--only-section-tmpl flag so that projects that keep everything
	but section descriptions inline can avoid cvs conflicts.

	* gtk-doc.make examples/Makefile.am: Add support for
	MKTMPL_OPTIONS

	* configure.in: Up version to 1.4.

2005-05-02  Matthias Clasen <mclasen@redhat.com>

	* gtkdoc-mkdb.in: Accept C comments between struct name
	and struct definition. GObject has an instance of this.

2005-03-21  Matthias Clasen <mclasen@redhat.com>

	* gtk-doc.dcl: Allow ':' in names. (#169087)
