@@ -1,3 +1,12 @@
+2005-08-15  Stefan Kost  <ensonic@users.sf.net>
+
+	* COPYING-DOCS:
+	* Makefile.am:
+	* configure.in:
+	* omf.make:
+	* xmldocs.make:
+          adding the infrastructure for installation of gtkdoc manual
+
 2005-08-12  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
